# dlibforAndroid

./: .gitignore  README.md  settings.gradle
dlibmodule/src/main/cpp/: CMakeLists.txt  MathUtils.cpp  algorithms.cpp  native-lib.cpp
dlibmodule/src/main/cpp/Image/: ImageLoader.cpp
dlibmodule/src/main/cpp/ImageProcessing/: ObjectDetection.cpp
dlibmodule/src/main/cpp/dlib/any/: any_trainer_abstract.h
dlibmodule/src/main/cpp/dlib/bsp/: bsp_abstract.h
dlibmodule/src/main/cpp/dlib/data_io/: load_image_dataset_abstract.h
dlibmodule/src/main/cpp/dlib/disjoint_subsets/: disjoint_subsets.h  disjoint_subsets_sized.h
dlibmodule/src/main/cpp/dlib/dnn/: core_abstract.h  input_abstract.h  loss.h  trainer_abstract.h
dlibmodule/src/main/cpp/dlib/filtering/: kalman_filter_abstract.h
dlibmodule/src/main/cpp/dlib/geometry/: border_enumerator_abstract.h  drectangle.h  drectangle_abstract.h  point_transforms.h  point_transforms_abstract.h  rectangle.h  rectangle_abstract.h
dlibmodule/src/main/cpp/dlib/graph_cuts/: min_cut_abstract.h
dlibmodule/src/main/cpp/dlib/gui_core/: gui_core_kernel_abstract.h
dlibmodule/src/main/cpp/dlib/gui_widgets/: base_widgets.cpp  base_widgets.h  base_widgets_abstract.h  canvas_drawing_abstract.h  drawable_abstract.h  fonts.cpp  fonts.h  fonts_abstract.h  style_abstract.h  widgets.cpp  widgets.h  widgets_abstract.h
dlibmodule/src/main/cpp/dlib/image_keypoint/: binned_vector_feature_image_abstract.h  fine_hog_image_abstract.h  hashed_feature_image_abstract.h  hog_abstract.h  nearest_neighbor_feature_image_abstract.h  poly_image_abstract.h
dlibmodule/src/main/cpp/dlib/image_loader/: image_loader_abstract.h
dlibmodule/src/main/cpp/dlib/image_processing/: box_overlap_testing_abstract.h  correlation_tracker.h  detection_template_tools.h  detection_template_tools_abstract.h  full_object_detection_abstract.h  object_detector.h  object_detector_abstract.h  remove_unobtainable_rectangles.h  scan_fhog_pyramid_abstract.h  scan_image_abstract.h  scan_image_boxes.h  scan_image_boxes_abstract.h  scan_image_custom.h  scan_image_custom_abstract.h  scan_image_pyramid.h  scan_image_pyramid_abstract.h  scan_image_pyramid_tools.h  scan_image_pyramid_tools_abstract.h  shape_predictor_abstract.h  shape_predictor_trainer_abstract.h
dlibmodule/src/main/cpp/dlib/image_saver/: image_saver_abstract.h
dlibmodule/src/main/cpp/dlib/image_transforms/: assign_image_abstract.h  draw_abstract.h  fhog.h  fhog_abstract.h  hough_transform_abstract.h  image_pyramid_abstract.h  integral_image.h  integral_image_abstract.h  interpolation.h  interpolation_abstract.h  random_cropper.h  random_cropper_abstract.h  spatial_filtering_abstract.h
dlibmodule/src/main/cpp/dlib/manifold_regularization/: linear_manifold_regularizer.h  linear_manifold_regularizer_abstract.h
dlibmodule/src/main/cpp/dlib/matrix/: matrix_la_abstract.h  matrix_subexp.h  matrix_subexp_abstract.h  matrix_trsm.h
dlibmodule/src/main/cpp/statistics/: statistics_abstract.cpp
(+46 files in other folders)
